2010-02-01  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Use sharkContext::module
	instead of sharkContext::module_provider when using LLVM 2.7
	to handle LLVM r94686 API change.
	* ports/hotspot/src/share/vm/shark/sharkContext.hpp
	(sharkContext::module): Made public when using LLVM 2.7.
	(sharkContext::module_provider): Undefine when using LLVM 2.7.
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	(llvm/ModuleProvider.h): Undefine when using LLVM 2.7.

2010-01-29 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add INITIAL_BOOTSTRAP_LINK_STAMP
	to avoid the need to check for bootstrap/jdk1.6.0
	on each javac or jar invocation.

2010-01-29 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Add ICEDTEANPPLUGIN_TARGET
	back as a dependency of icedtea and icedtea-debug.

2010-01-28 Pavel Tisnovsky <ptisnovs@redhat.com>

	* Makefile.am: Add new patches.
	* patches/icedtea-6920143-using-with-mouse.patch:
	Fix for Sun bug 6920143: added small delay to make
	sure that TextArea animation have finished
	* patches/icedtea-6920172-location-relative-to-test.patch:
	Fix for Sun bug 6920172: test case correction. Check
	frame position against graphics environment's
	center point
	* patches/icedtea-6920172-turkish.patch:
	Added othervm flag to ensure that this test will run
	in isolation

2010-01-27 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Use one general
	stamps/plugin.stamp to mark plugin
	installation as in IcedTea7.  Add
	matching clean-plugin target.

2010-01-28  Edward Nevill   <ed@camswl.com>

	* asm_helper.cpp, cppInterpreter_arm.S, thumb2.cpp
	Add stack checking in JIT code, fix IllegalMonitorException bug,
	make compilation MP safe, fix bug with large no. of locals,
	added buffer checking on compile buffer, fix large tableswitch bug,
	fix byte accessor bug, add opc_return_register_finalizer.

2010-01-27 Andrew John Hughes  <ahughes@redhat.com>
