@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 Edward Nevill
+ * Copyright 2009, 2010 Edward Nevill
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
