@@ -1,4 +1,4 @@
-@ Copyright 2009 Edward Nevill
+@ Copyright 2009, 2010 Edward Nevill
 @ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 @
 @ This code is free software; you can redistribute it and/or modify it
