@@ -1,3 +1,11 @@
+2010-02-02  Edward Nevill <ed@camswl.com>
+
+	* asm_helper.cpp, cppInterpreter_arm.S, thumb2.cpp, bytecodes_arm.def
+	Several bug fixes to compiled exection handling methods.
+	Copyright notices updated to 2010 and added to thumb2.cpp
+	Assertions turned off in PRODUCT build
+	Compilation summary and stats to stderr instead of stdout
+
 2010-02-01  Xerxes Rånby  <xerxes@zafena.se>
 
 	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
